# steikemann2d

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  clang-reformat-steikemann-plugin.ps1  gdd.md  mingw-toolchain.cmake  set_windows_env.bat  todo.md
.claude/: coding_standards.md  common_utilities.md  project_overview.md
Excalidraw/: steikedrawing.md
addons/: debug_draw_3d  debug_menu
cpp/: CMakeLists.txt
cpp/cmake/: compile_flags.cmake  compiler_warnings.cmake  libname.cmake  source_files.cmake
cpp/fmt/fmt/: args.h  chrono.h  color.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
cpp/src/: collisionmasks.h  gameplay_node.h  godotutils.h  groups.h  log.h  macros.h  math_statics.h  mathstatics.h  notifications.h  register_types.cpp  timestamp.h
cpp/src/camera/: playercamera.h
cpp/src/character/: player_character.h
cpp/src/events/: daelk_event.h
cpp/src/gameplay_events/: daelk_event.h  gameplay_node.h
cpp/src/input/: actions.h  input_actions.h  input_manager.h  input_mode.h  input_parser.h  input_state.h  inputmanager.h  inputparser.h  typedef.h
cpp/src/player/: daelkresource.h  inputcomponent.h  movementcomponent.h  movementcomponent_old.h  playercharacterbody.h  playerspawner.h  playerspawnpoint.h  state.h
cpp/src/player/fsm/: state_daelking_launch.h  state_daelking_pre_launch.h  state_walking.h  typedef.h  utils.h
cpp/src/player/spawning/: playerspawner.h  temporaryplayerspawnpoint.h
cpp/src/resources/: visuallayers.h
cpp/src/terrain/: terrainobjectbase.h  terrainobjectbase_old.h  visualobject.h
cpp/src/tests/: tests.h  typedef.h
cpp/src/tests/example/: examplenode.h  examplenode_test.h
cpp/src/utils/: valueinterpolatonstep.h  visuallayers.h
example-plugin/: CMakeLists.txt  gdextension.in  register_types.cpp  register_types.h
example-plugin/src/: node3d_extension.cpp  node3d_extension.h
fsm-plugin/: CMakeLists.txt  register_types.cpp  register_types.h
fsm-plugin/src/: playerstate.cpp  playerstate.h  state.cpp  state.h
gdd/: STEIKEMANN GDD.md
godot-cpp/: .gitignore  CMakeLists.txt
godot-cpp/src/classes/: _translation_unit_classes.cpp
godot-cpp/src/core/: _translation_unit_core.cpp
godot-cpp/src/variant/: _translation_unit_variant.cpp
main-world/: main-world-environment.tres  main.gd  pivot_camera.gd
pottit/: pottit_player.gd
pottit/assets/: pottit_animation_collected.gltf.import
pottit/assets/material/: pottit_mat-eyeball.tres  pottit_mat-eyeiris.tres  pottit_mat-face.tres  pottit_mat-glasses.tres  pottit_mat-hair.tres  pottit_mat-low-upper-body.tres
pottit/assets/textures/: Upper_body_mat_BaseColor.png.import  Upper_body_mat_OcclusionRoughnessMetallic.png.import  body_mat_BaseColor.png.import  body_mat_Normal.png.import  brow_OcclusionRoughnessMetallic.png.import  brow_green_BaseColor.png.import  eyeball_mat_BaseColor.png.import  eyeball_mat_Normal.png.import  eyeball_mat_OcclusionRoughnessMetallic.png.import  face_low_OcclusionRoughnessMetallic.png.import  glasses_mat1_Normal.png.import  glasses_mat1_OcclusionRoughnessMetallic.png.import  hair_OcclusionRoughnessMetallic.png.import  hair_green_BaseColor.png.import  iris_mat_BaseColor.png.import  iris_mat_Normal.png.import  iris_mat_OcclusionRoughnessMetallic.png.import  lashes_low_OcclusionRoughnessMetallic.png.import  staff_mat_BaseColor.png.import  staff_mat_OcclusionRoughnessMetallic.png.import
project/: .gitignore  .project.godot.un~  export_presets.cfg  project.godot  project.godot~
project/addons/: debug_menu
project/addons/debug_draw_3d/: debug_draw_3d.gdextension.uid
project/addons/debug_menu/: debug_menu.gd.uid  debug_menu.tscn  plugin.gd.uid
project/addons/godot-jolt/: godot-jolt.gdextension.uid
project/addons/steikemann2d/: .gitignore  steikemann2d.gdextension  steikemann2d.gdextension.uid
project/autoloaded/: global_typedefs.gd  input_context_handler.gd
project/autoloaded/global_typedefs/: curve_time.gd  global_typedefs.gd  timestamp.gd
project/autoloaded/input_context_handler/: input_context_handler.gd  typedefs.gd
project/autoloaded/main_menu/: mainmenu.gd  mainmenu.tscn
project/autoloaded/parameters/: params.gd  params.tscn
project/levels/: main.tscn  test_1.tscn  test_onground.tscn  test_onground_curved.tscn  test_onground_flat.tscn  test_onground_flat2.tscn
project/main-world/: main.tscn
project/pottit/: blomkaol.tscn  player_node.tscn  pottit_player.gd
project/pottit/assets/: mesh.res  (+1 more)
project/resources/: new_curve.tres  visuallayerresource.tres
project/scenes/: daelkingtest.tscn
project/scripts/: smackable_test.gd
project/shaders/: blomkaol.gdshader  sceenspace_blur.gdshader.uid
project/textures/: white.png.import
project/tmp/: curve_test.gd  curve_test.tscn  new_curve.tres  new_curve_3d.tres  quattest.gd  quattest.tscn
project/tools/: input_context_handler.gd  input_map.gd  input_user.gd  jsonparser.gd
scripts/hooks/: pre-commit  pre-commit.py  pre-merge-commit
src/: CMakeLists.txt
src/steikemann/: CMakeLists.txt  register_types.cpp  steikemann2d.gdextension  steikemann2d.gdextension.template  version.txt
src/steikemann/cmake/: compile_flags.cmake  compiler_warnings.cmake  copy_version_file.cmake  generate_gdextension.cmake  generate_version_h.cmake  libname.cmake
src/steikemann/cmake/scripts/: generate_gdextension.cmake
src/steikemann/src/: register_types.cpp  version.h
steikemann-gameplay-plugin/: CMakeLists.txt  gdextension.in  register_types.cpp  register_types.h
steikemann-gameplay-plugin/include/: camerapivot.h  mainnode.h  playernode.h  playerstate.h
steikemann-gameplay-plugin/include/character/: animtree.h  camerapivot.h  playerfsm.h  playernode.h  playerstates.h
steikemann-gameplay-plugin/include/core/: core.h  godotincludes.h  macroes.h
steikemann-gameplay-plugin/include/fsm/: state.h
steikemann-gameplay-plugin/src/: _translation_unit.cpp  camerapivot.cpp  core.cpp  mainnode.cpp  playerfsm.cpp  playernode.cpp  playerstate.cpp  playerstate.h  playerstates.cpp  state.cpp
(+768 files in other folders)
